Mon Feb 10 21:10:20 1997  Laurent Pautet  <pautet@lglsun2.epfl.ch>

	* xe_stubs.adb: Reorganize code (alphabetical order) and change
 	some parameter names.

	* xe_stubs.adb: Use the two new procedures of XE.

	* xe_stubs.adb: Improve recompilation and time stamp
 	operations. Fix a bug as well. Now, Mark_RCI_Callers has a new
 	capability which allows to compute the most recent ali file in the
 	partition sub-tree.

	* xe_check.adb: Add some debugging messages.

	* xe_utils.ads, xe_utils.adb: Reorganize code (alphabetical order)
 	and change some parameter names.

	* xe_utils.ads, xe_utils.adb : Add two new procedures :
 	Write_Stamp_Comparison and Write_Missing_File (Debugging messages).

	* xe.ads, xe.adb, xe_parse.adb: Add a new configuration language
 	type : Channel.

	* xe.ads, xe.adb: Add a new procedure Get_Partition_Dir which
 	returns the directory where all the partition sources are stored.

	* xe.ads, xe.adb: Add a new field in Partition_Type : Most_Recent
 	which denotes the most recent file of a partition. 

	* xe.ads, xe.adb: Add a new procedure Update_Partition_Stamp to
 	have more informations to decide when to rebuild a partition. Get
 	rid of Maybe_Most_Recent_Stamp which was not precise enough.

Mon Feb 10 19:48:58 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Add support for gnatmake -s

Fri Feb  7 09:53:09 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* xe.ads: Add a new parameter File in Maybe_Most_Recent_Stamp to
 	save the file that causes the update of Most_Recent_Stamp.

	* xe.adb, xe_utils.adb, xe_check.adb, xe.adb, xe_parse.adb :
 	Update the calls to Maybe_Most_Recent_Stamp.

	* config.sdefault: Break S1, S2 and S3 declaration lines.

	* xe_usage.adb: gnatmake -l has been changed into -M. Propagates
 	this change to gnatdist.

Wed Feb  5 17:32:57 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* make-ada-dir: New file used to track what's needed in dist1.

	* Makefile.am: Added -a to gnatmake flags to allow the use of our